internal/gatewayapi/testdata/mergebackends-tls-demerge-listener-btp-divergence-no-sectionname.out.yaml
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    name: btp-tls-1-circuit-breaker
    namespace: envoy-gateway
  spec:
    circuitBreaker:
      maxConnections: 1024
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      sectionName: tls-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tls-1
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: tls-1
      port: 91
      protocol: TLS
      tls:
        mode: Passthrough
    - allowedRoutes:
        namespaces:
          from: All
      name: tls-2
      port: 92
      protocol: TLS
      tls:
        mode: Passthrough
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tls-1
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TLSRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tls-2
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TLSRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: test
          namespace: envoy-gateway-system
        spec:
          logging: {}
          mergeBackends: {}
        status: {}
      listeners:
      - name: envoy-gateway/gateway-1/tls-1
        ports:
        - containerPort: 10091
          name: tls-91
          protocol: TLS
          servicePort: 91
      - name: envoy-gateway/gateway-1/tls-2
        ports:
        - containerPort: 10092
          name: tls-92
          protocol: TLS
          servicePort: 92
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
tlsRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TLSRoute
  metadata:
    name: tlsroute-1
    namespace: default
  spec:
    hostnames:
    - foo.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: service-3
        port: 8163
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    backendClusters:
    - metadata:
        kind: Service
        name: service-3
        namespace: default
        sectionName: "8163"
      name: service/default/service-3/8163/tcp
      setting:
        addressType: IP
        endpoints:
        - host: 7.7.7.8
          port: 8163
        - host: 7.7.7.7
          port: 8163
        metadata:
          kind: Service
          name: service-3
          namespace: default
          sectionName: "8163"
        name: service/default/service-3/8163/tcp
        protocol: TCP
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 91
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tls-1
      name: envoy-gateway/gateway-1/tls-1
      port: 10091
      routes:
      - circuitBreaker:
          maxConnections: 1024
        destination:
          metadata:
            kind: TLSRoute
            name: tlsroute-1
            namespace: default
            policies:
            - kind: BackendTrafficPolicy
              name: btp-tls-1-circuit-breaker
              namespace: envoy-gateway
          name: tlsroute/default/tlsroute-1/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.8
              port: 8163
            - host: 7.7.7.7
              port: 8163
            metadata:
              kind: Service
              name: service-3
              namespace: default
              sectionName: "8163"
            name: tlsroute/default/tlsroute-1/rule/-1/backend/0
            protocol: TCP
            weight: 1
        metadata:
          kind: TLSRoute
          name: tlsroute-1
          namespace: default
          policies:
          - kind: BackendTrafficPolicy
            name: btp-tls-1-circuit-breaker
            namespace: envoy-gateway
        name: tlsroute/default/tlsroute-1
        tls:
          inspector:
            snis:
            - foo.com
    - address: 0.0.0.0
      externalPort: 92
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tls-2
      name: envoy-gateway/gateway-1/tls-2
      port: 10092
      routes:
      - destination:
          backendClusterRefs:
          - name: service/default/service-3/8163/tcp
            weight: 1
          metadata:
            kind: TLSRoute
            name: tlsroute-1
            namespace: default
            policies:
            - kind: BackendTrafficPolicy
              name: btp-tls-1-circuit-breaker
              namespace: envoy-gateway
          name: tlsroute/default/tlsroute-1/rule/-1
        metadata:
          kind: TLSRoute
          name: tlsroute-1
          namespace: default
          policies:
          - kind: BackendTrafficPolicy
            name: btp-tls-1-circuit-breaker
            namespace: envoy-gateway
        name: tlsroute/default/tlsroute-1
        tls:
          inspector:
            snis:
            - foo.com
